tests/NormalTests/paczka1/fuzzy1/85744030.err
Error in line 8: S826 A834 24,5
Error in line 15: uP3 S826 2,0
Error in line 25: T76D97ExW S317 29,1
Error in line 26: pRB0WDp S826 24,1
Error in line 22: uXk A834 57,8
